# stenos

./: CMakeLists.txt  README.md  doxygen.conf  stenos.pc.in  stenos_config.h.in
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
benchs/: CMakeLists.txt  bench_all.cpp  bench_cvector.cpp  bench_img.cpp  bench_to_csv.cpp  benching.hpp
cmake/: stenosConfig.cmake.in
docs/: cvector.md
save/stenos/: bits.hpp  cvector.hpp  cvector.hpp.keep  stenos.h  stenos_export.h
save/stenos/internal/: block_compress.h  lz4dry.cpp  lz4dry.h  reduced_unshuffle_table.h  shuffle-avx2.h  shuffle-generic.h  shuffle.cpp  shuffle.h  simd.cpp  stenos.cpp  zstd_buffer.h
stenos/: bits.hpp  cvector.hpp  stenos.h  timer.hpp
stenos/internal/: block_compress.h  delta.cpp  delta.cpp.keep  delta.h  lz4dry.cpp  lz4dry.h  lz_compress.h  reduced_shuffle_table.h  shuffle-avx2.cpp  shuffle-avx2.h  shuffle-generic.cpp  shuffle-generic.h  shuffle-sse2.cpp  shuffle-sse2.h  shuffle.cpp  shuffle.h  simd.cpp  simd.h  stenos.cpp  tiny_pool.h  zstd_wrapper.h
tests/: CMakeLists.txt  test_cvector.cpp  testing.hpp  tests.cpp  tests_comp_decomp.cpp
